--- a/saad-portfolio/src/styles/about.module.css
+++ b/saad-portfolio/src/styles/about.module.css
@@ -56,6 +56,7 @@
     height: auto;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: grabbing;
 }
 
 @media (max-width: 768px) {
