added font to the navbar, can adjust obv

--- a/saad-portfolio/src/components/navbar.module.css
+++ b/saad-portfolio/src/components/navbar.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Gothic+A1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nanum+Myeongjo:wght@400;700;800&family=Oswald:wght@200..700&family=PT+Sans&family=VT323&display=swap');
+
 body {
     background-color: ghostwhite;
 }
@@ -31,6 +33,9 @@ body {
     color: black;
     text-decoration: none;
     transition: color 0.3s ease;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .navLink:hover {
