--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -61,7 +61,7 @@
 
 .aboutAnchor {
     background-color: mediumpurple;
-    box-shadow: 0 5px 0 darkorchid;
+    box-shadow: 0 5px 0 darkslateblue;
     border-radius: 5px;
     color: white;
     padding: 0.5em 1em;
