--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -12,8 +12,8 @@
 }
 
 .skillsTitle {
-    font-size: 2.5rem;
-    font-family: "Lato", sans-serif;
+    font-size: 3rem;
+    font-family: "VT323", monospace;
     font-weight: 800;
     font-style: normal;
     margin-bottom: 1rem;
