--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -11,8 +11,8 @@
 }
 
 .contactTitle {
-    font-size: 2rem;
-    font-family: "Lato", sans-serif;
+    font-size: 3rem;
+    font-family: "VT323", monospace;
     font-weight: 800;
     font-style: normal;
     margin: 0;
@@ -57,7 +57,6 @@
     width: 100%;
     resize: none;
     height: 100px !important;
-
 }
 
 .contactInput, .contactInputMsg {
