--- a/src/styles/education.module.css
+++ b/src/styles/education.module.css
@@ -19,8 +19,8 @@
 }
 
 .educationTitle {
-    font-size: 2.5rem;
-    font-family: "Lato", sans-serif;
+    font-size: 3rem;
+    font-family: "VT323", monospace;
     font-weight: 800;
     font-style: normal;
     margin-bottom: 1rem;
