--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -21,9 +21,9 @@
 }
 
 .skillsList {
-    background-color: #E7DBEF;
-    border: 10px solid #E7DBEF;
-    border-radius: 20px;
+    /*background-color: #E7DBEF;*/
+    /*border: 10px solid #E7DBEF;*/
+    border-radius: 1px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     padding: 1rem;
     margin-bottom: 1rem;
